<resources>
    <string name="app_name">Let\'s Weather</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="main_title">Let\'s Weather</string>
    <string name="main_AutoDetect">Auto Detect</string>
    <string name="main_EnterLocation">Enter Location</string>
    <string name="main_ChooseOnMap">Choose on Map</string>
    <string name="main_Settings">Settings</string>
    <string name="main_buttonComplete">Complete</string>
    <string name="main_buttonError">Error</string>
    <string name="main_buttonRetry">Retry</string>

    <string name="autoDetectMessage">Click this button will automatically detect your location. Then search for weather info.</string>
    <string name="enterLocationMessage">Choose a location on List or Enter its name in TextField.</string>
    <string name="chooseOnMapMessage">Choose a location on Google map to see its weather.</string>
    <string name="settingsMessage">Setting to make app more comfortable.</string>

    <string name="autoDetect_ChooseLocation">Choose a location</string>
    <string name="autoDetect_ChooseContact">Choose a contact</string>

    <string name="enterlocation_EnterLocationHint">Enter location here</string>

    <string name="tapColumnToView">Tap a column to view</string>
    <string name="refresh">Update</string>

    <string name="noInternetConnection">No Internet connection</string>
    <string name="GPSLocationNotFound">GPS location not found</string>
    <string name="appIntroduction">Let\'s weather is a weather forecast application.</string>
    <string name="therenoData">There\'s no data</string>
    <string name="invalidInput">Invalid Input</string>
    <string name="notFound">Not found</string>

    <string name="weatherToday">WEATHER TODAY</string>
    <string name="weatherIn5Days">WEATHER IN 5 DAYS</string>
    <string name="weatherIn10Days">WEATHER IN 10 DAYS</string>

    <string name="pressure">"Pressure: "</string>
    <string name="humidity">"Humidity: "</string>
    <string name="wind">"Wind: "</string>
    <string name="sunRise">"Sunrise: "</string>
    <string name="sunSet">"Sunset: "</string>
    <string name="today">Today</string>
    <string name="day">"Day "</string>
    <string name="itsAbout">"It\'s about "</string>
    <string name="gonnaBeCold">" degree. Gonna be cold today!"</string>
    <string name="howAboutPicnic">" degree. How about a picnic?"</string>
    <string name="gonnaBeHot">" degree. Gonna be hot. Take care of yourself buddy!"</string>
    <string name="longTimeNoSee">Hi buddy! Long time no see</string>
    <string name="sendSMSFail">SMS failed, please try again later.</string>
    <string name="GPSnotEnable">"GPS is not enabled. Do you want to go to settings menu?"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="history">History</string>
    <string name="app">App</string>
    <string name="lastCheck">Last Check</string>
    <string name="howToUse">How to use</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    
    // Weather type
    -- Thunder
    <string name="thunderStormWithLightRain">Thunderstorm with light rain</string>
    <string name="thunderStormWithRain">Thunderstorm with rain</string>
    <string name="thunderStormWithHeavyRain">thunderstorm with heavy rain</string>
    <string name="lightThunderStorm">Light thunderstorm</string>
    <string name="thunderStorm">Thunderstorm</string>
    <string name="heavyThunderStorm">Heavy thunderstorm</string>
    <string name="raggedThunderStorm">Ragged thunderstorm</string>
    <string name="thunderStormWithLightDrizzle">Thunderstorm with light drizzle	</string>
    <string name="thunderStormWithDrizzle">Thunderstorm with drizzle</string>
    <string name="thunderStormWithHeavyDrizzle">Thunderstorm with heavy drizzle	</string>

    --Drizzle
    <string name="lightIntensityDrizzle">Light intensity drizzle</string>
    <string name="drizzle">Drizzle</string>
    <string name="heavyIntensityDrizzle">Heavy intensity drizzle</string>
    <string name="lightIntensityDrizzleRain">Light intensity drizzle rain</string>
    <string name="drizzleRain">Drizzle rain</string>
    <string name="heavyIntensityDrizzleRain">Heavy intensity drizzle rain</string>
    <string name="showerRainAndDrizzle">Shower rain and drizzle</string>
    <string name="heavyShowerRainAndDrizzle">Heavy shower rain and drizzle	</string>
    <string name="showerDrizzle">Shower drizzle</string>

    -- Rain
    <string name="lightRain">Light rain</string>
    <string name="moderateRain">Moderate rain</string>
    <string name="heavyIntensityRain">Heavy intensity rain</string>
    <string name="veryHeavyRain">Very heavy rain</string>
    <string name="extremeRain">Extreme rain</string>
    <string name="freezingRain">Freezing rain</string>
    <string name="lightIntensityShowerRain">Light intensity shower rain</string>
    <string name="showerRain">Shower rain</string>
    <string name="heavyIntensityShowerRain">Heavy intensity shower rain</string>
    <string name="raggedShowerRain">Ragged shower rain</string>

    -- Snow
    <string name="lightSnow">Light snow</string>
    <string name="snow">Snow</string>
    <string name="heavySnow">Heavy snow</string>
    <string name="sleet">Sleet</string>
    <string name="showerSleet">Shower sleet</string>
    <string name="lightRainAndSnow">Light rain and snow	</string>
    <string name="rainAndSnow">Rain and snow</string>
    <string name="lightShowerSnow">Light shower snow</string>
    <string name="showerSnow">Shower snow</string>
    <string name="heavyShowerSnow">Heavy shower snow</string>

    -- Atmosphere
    <string name="mist">Mist</string>
    <string name="smoke">Smoke</string>
    <string name="haze">Haze</string>
    <string name="sandDustWhirls">Sand, dust whirls	</string>
    <string name="fog">Fog</string>
    <string name="sand">Sand</string>
    <string name="dust">Dust</string>
    <string name="volcanicAsh">Volcanic ash</string>
    <string name="squalls">Squalls</string>
    <string name="tornado">Tornado</string>

    -- Clouds
    <string name="clearSky">Clear sky</string>
    <string name="fewClouds">Few clouds</string>
    <string name="scatteredClouds">Scattered clouds</string>
    <string name="brokenClouds">Broken clouds</string>
    <string name="overcastClouds">Overcast clouds</string>
    <string name="skyIsClear">Sky is clear</string>

    <string name="temperatureUnit">Temperature Unit</string>
    <string name="pressureUnit">Pressure Unit</string>
    <string name="velocityUnit">Velocity Unit</string>


    <string name="facebook_app_id">1682759801955218</string>
    <string name="facebook_app_name">HelloFBSample</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Post ID: %1$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
    <string name="exception">Exception: %1$s</string>

    <string name="action_left">Facebook</string>
    <string name="action_mid">Twitter</string>
    <string name="action_right">Messenger</string>
    <string name="functionComingSoon">Function coming soon</string>

    <string name="helloFacebook">Open weather map</string>
    <string name="facebookDescription">Free weather forecast. We deliver 1 billion forecasts per day</string>
    <string name="facebookURL">http://openweathermap.org/</string>

</resources>
