<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/blue_lable"
        android:id="@+id/textView" />

    <TextView
        android:id="@+id/tvMainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textColor="@android:color/white"
        android:textSize="25dp"
        android:paddingTop="20dp"
        android:paddingLeft="30dp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/main_AutoDetect"
        android:id="@+id/btnMainAutoDetect"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/main_EnterLocation"
        android:id="@+id/btnMainEnterLocation"
        android:layout_below="@+id/btnMainAutoDetect"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/main_ChooseOnMap"
        android:id="@+id/btnMainChooseOnMap"
        android:layout_below="@+id/btnMainEnterLocation"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/main_Settings"
        android:id="@+id/btnMainSettings"
        android:layout_below="@+id/btnMainChooseOnMap"
        android:layout_centerHorizontal="true" />



</RelativeLayout>
